To fix a memory issue on the DJ-BUILD-LINUX slave when running TestNG, we set the MaxPermSize at 256m (-XX:MaxPermSize=256m)